--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "name": "cara",
   "description": "Playful and Colorful One-Page portfolio featuring Parallax effects and animations",
   "version": "0.2.11",
-  "author": "Javier <popopojgs@gmail.com>",
+  "author": "@lekoarts <popopojgs@gmail.com>",
   "license": "0BSD",
   "starter-name": "gatsby-starter-portfolio-cara",
   "scripts": {
@@ -16,7 +16,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
-    "javier/gatsby-theme-cara": "^3.0.0",
+    "@lekoarts/gatsby-theme-cara": "^3.0.0",
     "gatsby": "^4.18.2",
     "gatsby-plugin-gatsby-cloud": "^4.18.1",
     "gatsby-plugin-manifest": "^4.18.1",
